--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-*.go linguist-detectable=true
-*.xslt linguist-detectable=false
+* linguist-vendored
+*.go linguist-vendored=false
+*.py linguist-vendored=false
+*.yaml linguist-vendored=false
