--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.go linguist-vendored=false
 *.py linguist-vendored=false
 *.yaml linguist-vendored=false
+.devcontainer/** linguist-documentation=true
+kubeteus/** linguist-documentation=true
