--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * linguist-vendored
 *.go linguist-vendored=false
 *.py linguist-vendored=false
+*.sh linguist-vendored=false
 *.yaml linguist-vendored=false
 .devcontainer/** linguist-documentation=true
 kubeteus/** linguist-documentation=true
